# ResearchReportCenter

./: .env.example  .gitignore  README.md  TODO.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/memory/: MEMORY.md  architecture.md
.github/workflows/: deploy-pages.yml
app/: __init__.py  cli.py  config.py  highlighter.py  llm_client.py  manifest.py  models.py  pdf_processor.py  site_builder.py  summarizer.py  translator.py  utils.py
output/site_src/docs/: index.md
output/site_src/docs/reports/: china-economic-comment-cf450f6c.md  china-equity-strategy-a2f35963.md  china-macro-tracker-npc-press-conferences-global-oil-volatility-1fa77902.md
output/site_src/docs/styles/: highlight.css
output/state/: manifest.json
scripts/: check_structure.sh
tests/: test_cli.py  test_highlighter.py  test_manifest.py  test_pdf_page_kind.py  test_pdf_processor.py  test_site_builder.py  test_translator.py  test_utils.py
